--- a/app/src/main/res/layout/simple_for_single_tabel_one_single.xml
+++ b/app/src/main/res/layout/simple_for_single_tabel_one_single.xml
@@ -8,6 +8,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:visibility="visible"
+    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
     tools:context=".Tabels.viewpagers.MainActivity_Tabel_Single_PeopleOneSwipe">
 
     <TableLayout
@@ -19,9 +20,7 @@
         android:layout_height="match_parent"
         android:padding="10dp"
         android:background="#FFFFFF"
-        android:gravity="center"
-        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
-        tools:context=".Tabels.MainActivity_Tabel_Single_People">
+        android:gravity="center">
 
 
 
