--- a/app/src/main/res/layout/activity_main_fragmentcommitprices.xml
+++ b/app/src/main/res/layout/activity_main_fragmentcommitprices.xml
@@ -7,14 +7,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_gravity="center"
-    app:cardCornerRadius="10dp"
+    app:cardCornerRadius="1dp"
     app:cardElevation="2dp"
-    app:cardMaxElevation="1dp"
+    app:cardMaxElevation="10dp"
     app:strokeWidth="1dp"
     android:translationZ="10dp"
     android:animateLayoutChanges="true"
     app:cardBackgroundColor="#FFFFFF"
-    app:strokeColor="#C9D3D3"
+    app:strokeColor="#FFD5D9DA"
     android:checkable="true"
     android:clickable="true"
     android:focusable="true"
@@ -44,7 +44,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
             android:padding="2dp"
-            android:background="#FFFFFF"
+            android:background="@drawable/disayn_line_tablerow7"
             android:minHeight="35dp">
 
 
@@ -78,7 +78,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
             android:padding="2dp"
-            android:background="#FFFFFF"
+            android:background="@drawable/disayn_line_tablerow7"
             android:minHeight="35dp">
 
 
@@ -100,13 +100,10 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerHorizontal="true"
-
                     android:layout_marginStart="40dp"
                     android:layout_marginEnd="40dp"
-
                     android:layout_margin="2dp"
                     android:padding="2dp"
-
                     android:background="@drawable/style_for_newstypespinners_ietm7"
                     android:checkMark="?android:attr/listChoiceIndicatorSingle"
                     android:gravity="center_vertical|center_horizontal"
@@ -117,30 +114,6 @@
                     android:textSize="15dp"
                     android:textStyle="bold"
                     android:visibility="invisible" />
-
-
-
-
-
-
-
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycleviewcommitpay"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/prograessbarcommitpaydown"
-                    android:layout_below="@+id/searchview_commitpay"
-                    android:layout_centerHorizontal="true"
-                    android:background="#FFFFFF"
-                    android:minHeight="550dp"
-                    android:visibility="visible"
-                    android:layout_margin="2dp"
-                    android:padding="2dp"
-                    tools:ignore="MissingConstraints" />
-
-
 
 
                 <ProgressBar
@@ -156,8 +129,8 @@
                     android:scaleX="1"
                     android:layout_centerHorizontal="true"
                     android:indeterminate="true"
+                    android:background="@drawable/disayn_line_tablerow7"
                     android:visibility="visible" />
-
 
 
                 <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -166,8 +139,12 @@
                     android:layout_height="50dp"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:scrollbarFadeDuration="@integer/config_navAnimTime"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginBottom="2dp"
                     android:background="#FFD5D9DA"
+                    android:scrollbarFadeDuration="@integer/config_navAnimTime"
                     android:translationZ="5dp"
                     app:itemIconTint="#0E0E0E"
                     app:menu="@menu/manu_navigator_buttom_for_commitpay_search"
