--- a/app/src/main/res/layout/activity_main_fragmentcommitprices.xml
+++ b/app/src/main/res/layout/activity_main_fragmentcommitprices.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="2dp"
+            android:layout_margin="5dp"
             android:padding="2dp"
             android:background="@drawable/disayn_line_tablerow7"
             android:minHeight="35dp">
@@ -84,7 +84,7 @@
 
             <RelativeLayout
                 android:layout_column="0"
-                android:id="@+id/relativeLayout_recyreview"
+                android:id="@+id/recyreview_commintingprices"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal|center_vertical"
@@ -93,7 +93,7 @@
 
 
                 <SearchView
-                    android:id="@+id/searchview_commitpay"
+                    android:id="@+id/searchview_commintingprices"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_alignParentLeft="true"
@@ -116,10 +116,33 @@
                     android:visibility="invisible" />
 
 
+
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycleview_comminingpprices"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/prograessbar_commintingprices"
+                    android:layout_below="@+id/searchview_commintingprices"
+                    android:layout_centerHorizontal="true"
+                    android:background="#FFFFFF"
+                    android:minHeight="550dp"
+                    android:visibility="visible"
+
+                    android:layout_margin="2dp"
+                    android:padding="2dp"
+
+                    tools:ignore="MissingConstraints" />
+
+
+
+
+
                 <ProgressBar
-                    android:id="@+id/prograessbarcommitpaydown"
+                    android:id="@+id/prograessbar_commintingprices"
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                    android:layout_above="@+id/bottomnavigationActivicommit_search"
+                    android:layout_above="@+id/bottomnavigationw_commintingprices"
                     android:layout_width="match_parent"
                     android:indeterminateTint="#858888"
                     android:layout_margin="1dp"
@@ -134,7 +157,7 @@
 
 
                 <com.google.android.material.bottomnavigation.BottomNavigationView
-                    android:id="@+id/bottomnavigationActivicommit_search"
+                    android:id="@+id/bottomnavigationw_commintingprices"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_alignParentBottom="true"
