--- a/app/src/main/res/layout/activity_main_fragmentcommitprices.xml
+++ b/app/src/main/res/layout/activity_main_fragmentcommitprices.xml
@@ -172,10 +172,13 @@
                     android:layout_height="55dp"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:layout_margin="5dp"
-                    android:padding="2dp"
+                    android:layout_marginStart="5dp"
 
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@drawable/style_for_newstypespinners_ietm8"
+                    android:padding="2dp"
                     android:scrollbarFadeDuration="@integer/config_navAnimTime"
                     android:translationZ="1dp"
                     app:itemIconTint="#0E0E0E"
