--- a/app/src/main/res/menu/manu_navigator_buttom_for_comminingprices.xml
+++ b/app/src/main/res/menu/manu_navigator_buttom_for_comminingprices.xml
@@ -1,33 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:popupTheme="@style/fortasknavigator">
+    xmlns:tools="http://schemas.android.com/tools"
+    app:popupTheme="@style/fortasknavigator"
+    tools:context=".CommitingPrices.View.MainActivityCommitingPrices">
 
 
-    <item
-        android:id="@+id/bottomNavigationBack"
-        android:icon="@drawable/icon_dsu1_commit_exit556"
-        app:itemIconTint="@animator/select_forcommitmenu"
-        android:title="Выйти">
 
-    </item>
-    <item
-        android:id="@+id/bottomNavigationAsync"
-        android:contentDescription="Обмен"
-        android:icon="@drawable/icon_dsu1_commit_async"
-        app:itemIconTint="@animator/select_forcommitmenu"
-        android:title="Обмен"
-        android:tooltipText="Получение данных от сервера">
-</item>
+    <group android:id="@+id/grp1">
+        <item
+            android:id="@+id/bottomNavigationBack"
+            android:icon="@drawable/icon_dsu1_commit_exit556"
+            app:itemIconTint="@animator/select_forcommitmenu"
+            android:actionMenuTextColor="#FFD5D9DA"
+            android:tooltipText="Выйти"
+            android:title="Выйти"
+            app:showAsAction="ifRoom|withText">
 
-    <item
-        android:id="@+id/bottomNavigationSearch"
-        android:contentDescription="Поиск"
-        android:icon="@drawable/icon_for_commitpay_serach1"
-        app:itemIconTint="@animator/select_forcommitmenu"
-        android:title="Поиск"
-        android:tooltipText="Получение данных от сервера">
-    </item>
+        </item>
+    </group>
+
+    <group android:id="@+id/grp2">
+
+        <item
+            android:id="@+id/bottomNavigationAsync"
+            android:contentDescription="Обмен"
+            android:icon="@drawable/icon_dsu1_commit_async"
+            app:itemIconTint="@animator/select_forcommitmenu"
+            android:title="Обмен"
+            android:actionMenuTextColor="#FFD5D9DA"
+            app:showAsAction="ifRoom|withText"
+            android:tooltipText="Обмен">
+        </item>
+    </group>
+
+    <group android:id="@+id/grp3">
+
+        <item
+            android:id="@+id/bottomNavigationSearch"
+            android:contentDescription="Поиск"
+            android:icon="@drawable/icon_for_commitpay_serach1"
+            app:itemIconTint="@animator/select_forcommitmenu"
+            android:title="Поиск"
+            android:actionMenuTextColor="#FFD5D9DA"
+            app:showAsAction="ifRoom|withText"
+            android:tooltipText="Поиск">
+        </item>
+    </group>
+
+
+
+
 
 
 
